--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Discord Picture-in-Picture Extension",
     "version": "1.0",
-    "permissions": ["activeTab"],
+    "permissions": ["activeTab", "storage"],
     "background": {
       "service_worker": "background.js"
     },
